--- a/main.html
+++ b/main.html
@@ -14,8 +14,8 @@
 				  <th colspan="2">Nested Table 2</th>
 				  <tbody>
 				      <tr>
-						  <td>Column 1</td>
-						  <td>Column 2</td>
+						  <th>Column 1</th>
+						  <th>Column 2</th>
 					  </tr>
 					  <tr>
 						  <td>abc</td>
@@ -31,7 +31,11 @@
 				  </tr>
 				  <tr>
 					  <td>
-						  <ul><li>List item</li><li>List item</li><li>List item</li></ul>
+						  <ul>
+							  <li>List item</li>
+							  <li>List item</li>
+							  <li>List item</li>
+						  </ul>
 					  </td>
 				  </tr>
 			  </table>
